# polygons

./: CMakeLists.txt  Main.cpp  README.md  VERSION.cmake  version.h.in
src/: CMakeLists.txt  Color.hpp  Graph.cpp  Graph.hpp  Graph_test.cpp  Labeled.cpp  Labeled.hpp  Node.cpp  Node.hpp  Node_test.cpp  Solver.cpp  Solver.hpp  Solver_test.cpp  Triangle.cpp  Triangle.hpp
